# PlaneVs

./: CMakeLists.txt  PlaneVS.out  ReadMe.md  Whats_this.md  main.cpp  xmake.lua
cmake/: FontCache_Config.cmake  GLM_Config.cmake  GLM_Config_unix.cmake  GLM_Config_windows.cmake  JsonCpp_Config.cmake  JsonCpp_Config_unix.cmake  JsonCpp_Config_windows.cmake  SDL2_Config.cmake  SDL2_Config_unix.cmake  SDL2_Config_windows.cmake  tool.cmake
include/: app.hpp  default_body.hpp  empty_body.hpp  exec_body.hpp  game_body.hpp  gl_program.hpp  gl_shader.hpp  header.hpp  texture.hpp  validable.hpp
include/base/: config.hpp  destroyable.hpp  drawable.hpp  empty_body.hpp  exec_body.hpp  flip.hpp  font.hpp  geo_math.hpp  geomentry.hpp  gl_gfxbuf.hpp  gl_program.hpp  gl_shader.hpp  header.hpp  id.hpp  id_generator.hpp  image_sheet.hpp  itexture.hpp  log.hpp  manager.hpp  texture.hpp  texture_drawable.hpp  texture_repo.hpp  tools.hpp
include/engin/: animation.hpp  app.hpp  bgm.hpp  controller.hpp  director.hpp  drawable.hpp  empty_stage.hpp  exec_body.hpp  flipable.hpp  gl_gfxbuf.hpp  gl_program.hpp  gl_shader.hpp  isprite.hpp  movable.hpp  music.hpp  music_repo.hpp  object.hpp  resizable.hpp  rotatable.hpp  sprite.hpp  sprite_sheet_cache.hpp  stage.hpp  text.hpp  texture.hpp  texture_repo.hpp  updatable.hpp  visiable.hpp
include/engin/input/: button.hpp  device.hpp  input.hpp  keyboard.hpp  mouse.hpp
include/engin/ui/: ui.hpp
include/game/: bullet.hpp  charger.hpp  collide.hpp  game_body.hpp  objectable.hpp  plane.hpp  welcome_stage.hpp
include/game/controller/: controller.hpp  controller_command.hpp  controller_factory.hpp  empty_controller.hpp  keyboard_controller.hpp  plane_controller.hpp  plane_controller_command.hpp  plane_controller_keyboard_command.hpp
include/game/controller/plane/: plane_controller.hpp  plane_keyboard_controller.hpp
include/image_sheet/: image_sheet.hpp
resources/: blast.json  player_plane.json  readme.txt
shader/: geo_shader.frag  geo_shader.vert  shader.fs  shader.vs  tex_shader.frag  tex_shader.vert  text_shader.frag  text_shader.vert
src/: app.cpp  game_body.cpp  gl_program.cpp  gl_shader.cpp  main.cpp  texture.cpp
src/base/: font.cpp  geo_math.cpp  gl_program.cpp  gl_shader.cpp  image_sheet.cpp  log.cpp  texture.cpp  texture_repo.cpp
src/engin/: animation.cpp  app.cpp  bgm.cpp  director.cpp  flipable.cpp  gl_gfxbuf.cpp  gl_program.cpp  gl_shader.cpp  music.cpp  music_repo.cpp  sprite.cpp  sprite_sheet_cache.cpp  text.cpp  texture.cpp  texture_repo.cpp
src/engin/input/: button.cpp  keyboard.cpp  mouse.cpp
src/engin/ui/: draw_cb.cpp  ui.cpp  widgets.cpp
src/game/: bullet.cpp  chager.cpp  collide.cpp  game_body.cpp  main.cpp  plane.cpp  welcome_stage.cpp
src/game/controller/: controller.cpp
src/game/controller/plane/: plane_keyboard_controller.cpp
src/game/controllers/: keyboard_controller.cpp
src/image_sheet/: image_sheet.cpp
test/: Animation_Work.cpp  CMakeLists.txt  Font_Work.cpp  Input_Work.cpp  LearnJsonCpp.cpp  MusicRepo_Work.cpp  Music_Work.cpp  SpritReader_Work.cpp  SpriteReader_Work.cpp  SpriteSheetCache_Work.cpp  Sprite_Work.cpp  Text_Work.cpp  TextureRepo_Work.cpp  Texture_Work.cpp  UI_Work.cpp  sprite_reader.json
test/test_bombs/: bomb.json
test/test_resources/mario/: mario.json
test/test_resources/test_pngs/: icons.json
tool/: CMakeLists.txt  mp32ogg.py  spritesheet_unpacker.cpp
tools/: CMakeLists.txt
tools/ImageSheeter/: .gitignore  CMakeLists.txt  Makefile  ReadMe.md  info.txt
tools/ImageSheeter/include/: canva.hpp  header.hpp  imagesheeter_app.hpp  img2file.hpp  label.hpp  myapp.hpp  read_imgsheet.hpp  sdl_app.hpp  text_inputter.hpp  uiobject.hpp
tools/ImageSheeter/src/: canva.cpp  header.cpp  imagesheeter_app.cpp  img2file.cpp  label.cpp  main.cpp  myapp.cpp  sdl_app.cpp  text_inputter.cpp  uiobject.cpp
tools/ImageSheeter/tests/: ReadImgSheeter.cpp
