include_directories(${CMAKE_SOURCE_DIR}/include  ${OPENGL_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
link_directories(${OPENGL_LIBRARY_DIRS} ${GLEW_LIBRARY_DIRS})
link_libraries(${OPENGL_LIBRARIES} ${GLEW_LIBRARIES})

file(COPY ./test_resources DESTINATION ${CMAKE_BINARY_DIR}/test)
file(COPY ../shader DESTINATION ${CMAKE_BINARY_DIR}/test)

set(TEST_SRC ${SRC})
list(TRANSFORM TEST_SRC PREPEND ../)
add_executable(SpriteReader_Work ./SpriteReader_Work.cpp ${TEST_SRC})
add_executable(TextureRepo_Work ./TextureRepo_Work.cpp ${TEST_SRC})
add_executable(Sprite_Work ./Sprite_Work.cpp ${TEST_SRC})
add_executable(SpriteSheetCache_Work ./SpriteSheetCache_Work.cpp ${TEST_SRC})
add_executable(Animation_Work ./Animation_Work.cpp ${TEST_SRC})
add_executable(Texture_Work ./Texture_Work.cpp ${TEST_SRC})
add_executable(Music_Work ./Music_Work.cpp ${TEST_SRC})
add_executable(MusicRepo_Work ./MusicRepo_Work.cpp ${TEST_SRC})
add_executable(Text_Work ./Text_Work.cpp ${TEST_SRC})
